# arborium

./: .dockerignore  .gitignore  Cargo.toml  DEVELOP.md  Dockerfile.ci  GRAMMARS.toml  GRAMMARS.toml.backup  PUBLISH.md  README.md  justfile  npm-trusted-publisher.user.js  version.json
.github/docker/: Dockerfile.plugin-builder
.github/workflows/: ci.yml
component-demo/: host-demo.html
crates/arborium/: Cargo.toml
crates/arborium-ada/: build.rs  info.toml
crates/arborium-agda/: arborium.kdl  build.rs  info.toml
crates/arborium-asciidoc/: arborium.kdl  build.rs  info.toml
crates/arborium-asciidoc_inline/: arborium.kdl  build.rs
crates/arborium-asm/: arborium.kdl  build.rs  info.toml  sample.asm
crates/arborium-awk/: arborium.kdl  build.rs  info.toml
crates/arborium-bash/: arborium.kdl  build.rs  info.toml  sample.sh
crates/arborium-batch/: build.rs  info.toml
crates/arborium-c/: arborium.kdl  build.rs  info.toml
crates/arborium-c-sharp/: arborium.kdl  build.rs  info.toml
crates/arborium-caddy/: arborium.kdl  build.rs  info.toml
crates/arborium-capnp/: arborium.kdl  build.rs  info.toml
crates/arborium-clojure/: Cargo.toml  build.rs  info.toml  sample.clj
crates/arborium-clojure/src/: lib.rs
crates/arborium-cmake/: arborium.kdl  build.rs  info.toml
crates/arborium-commonlisp/: arborium.kdl  build.rs  info.toml
crates/arborium-cpp/: arborium.kdl  build.rs  info.toml  sample.cpp
crates/arborium-css/: arborium.kdl  build.rs  info.toml  sample.css
crates/arborium-d/: arborium.kdl  build.rs  info.toml
crates/arborium-dart/: arborium.kdl  build.rs  info.toml
crates/arborium-devicetree/: arborium.kdl  build.rs  info.toml
crates/arborium-diff/: build.rs  info.toml  sample.diff
crates/arborium-dockerfile/: arborium.kdl  build.rs  info.toml  sample.dockerfile
crates/arborium-docsrs-demo/: Cargo.toml  README.md
crates/arborium-dot/: arborium.kdl  build.rs  info.toml
crates/arborium-elisp/: arborium.kdl  build.rs  info.toml
crates/arborium-elixir/: Cargo.toml  arborium.kdl  build.rs  info.toml
crates/arborium-elm/: arborium.kdl  build.rs  info.toml
crates/arborium-erlang/: arborium.kdl  build.rs  info.toml
crates/arborium-fish/: arborium.kdl  build.rs  info.toml
crates/arborium-fsharp/: arborium.kdl  build.rs  info.toml  sample.fs
crates/arborium-gleam/: Cargo.toml  arborium.kdl  build.rs  info.toml  sample.gleam
crates/arborium-glsl/: arborium.kdl  build.rs  info.toml
crates/arborium-go/: arborium.kdl  build.rs  info.toml  sample.go
crates/arborium-graphql/: arborium.kdl  build.rs  info.toml
crates/arborium-haskell/: arborium.kdl  build.rs  info.toml  sample.hs
crates/arborium-hcl/: Cargo.toml  arborium.kdl  build.rs  info.toml
crates/arborium-highlight/: Cargo.stpl.toml  Cargo.toml
crates/arborium-hlsl/: arborium.kdl  build.rs  info.toml
crates/arborium-host/: Cargo.stpl.toml  Cargo.toml
crates/arborium-html/: arborium.kdl  build.rs  info.toml  sample.html
crates/arborium-html-plugin/: Cargo.toml
crates/arborium-java/: Cargo.toml  arborium.kdl  build.rs  info.toml  sample.java
crates/arborium-java/src/: lib.rs
crates/arborium-javascript-plugin/: Cargo.toml
crates/arborium-jinja2/: Cargo.toml  build.rs  info.toml
crates/arborium-jinja2/src/: lib.rs
crates/arborium-markdown-inline/: Cargo.toml  arborium.kdl  build.rs
crates/arborium-markdown-inline/src/: lib.rs
crates/arborium-plugin-runtime/: Cargo.stpl.toml  Cargo.toml
crates/arborium-query/: Cargo.stpl.toml  Cargo.toml  build.rs  info.toml
crates/arborium-query/src/: lib.rs
crates/arborium-sysroot/: Cargo.stpl.toml  Cargo.toml
crates/arborium-sysroot/wasm-sysroot/: stdio.h
crates/arborium-test-harness/: Cargo.stpl.toml  Cargo.toml
crates/arborium-test-harness/src/: lib.rs
crates/arborium-theme/: Cargo.stpl.toml  Cargo.toml
crates/arborium-theme/src/: theme.rs
crates/arborium-tree-sitter/: Cargo.stpl.toml  Cargo.toml
crates/arborium-wire/: Cargo.stpl.toml  Cargo.toml
crates/arborium/examples/: ansi_showcase.rs
crates/arborium/src/: ansi.rs  highlighter.rs  highlights.rs  html.rs  lib.rs  theme.rs
crates/arborium/tests/: html.rs  svelte.rs  vue.rs
crates/group-a/arborium-html/: Cargo.toml  arborium.kdl  build.rs
crates/group-a/arborium-html-plugin/: Cargo.toml
crates/group-a/arborium-html-plugin/src/: bindings.rs  lib.rs
crates/group-a/arborium-html/grammar/src/: grammar.json  parser.c
crates/group-a/arborium-html/samples/: component.html
crates/group-a/arborium-javascript/: Cargo.toml  arborium.kdl  build.rs
crates/group-a/arborium-javascript-plugin/: Cargo.toml
crates/group-a/arborium-javascript-plugin/src/: lib.rs
crates/group-a/arborium-javascript/grammar/src/: parser.c
crates/group-a/arborium-javascript/samples/: application.js
crates/group-a/arborium-javascript/src/: lib.rs
crates/group-a/arborium-rust-plugin/: Cargo.toml
crates/group-a/arborium-rust-plugin/src/: lib.rs
demo/: .icon-cache.json  app.js  index.html  index.stpl.html  language-info.json  plugins.json  registry.json  styles.css  template.html
demo/samples/: ada.adb  (+28 more)
docs/: samples_todo.md
examples/wasm-browser/: Cargo.toml  README.md  index.html
examples/wasm-browser/src/: inspect-raw.rs  inspect.rs  lib.rs
langs/: Cargo.toml  plugins.json
scripts/: install-hooks
tree-sitter/: Cargo.toml
xtask/: Cargo.toml  DESIGN.md
xtask/src/: build.rs  cache.rs  check_wasm_env_imports.rs  ci.rs  commands.rs  config.rs  deploy_website.rs  generate.rs  generate_crates.rs  generate_demo.rs  generate_readme.rs  lint.rs  lint_new.rs  main.rs  pack.rs  plan.rs  precompress.rs  publish.rs  serve.rs  serve_demo.rs  theme_gen.rs  tiering.rs  tool.rs  types.rs  util.rs  vendor_grammar.rs  version_store.rs
xtask/templates/: app.stpl.js  build.stpl.rs  cargo.stpl.toml  docsrs_demo_header.stpl.html  index.stpl.html  lib.stpl.rs  plugin_cargo.stpl.toml  plugin_cargo_toml.stpl  plugin_lib.stpl.rs  plugin_lib_rs.stpl  plugin_package.stpl.json  plugin_package_json.stpl  plugin_readme.stpl.md  root_readme.stpl.md  umbrella_lib.stpl.rs
(+615 files in other folders)
