[workspace]
members = ["xtask"]
resolver = "3"

# Minimal workspace for now; future generated workspaces
# will live under langs/group-{animal}/.

[workspace.dependencies]
arborium = { path = "crates/arborium", version = "0.2.0" }
arborium-ada = { path = "crates/arborium-ada", version = "0.2.0" }
arborium-agda = { path = "crates/arborium-agda", version = "0.2.0" }
arborium-asciidoc = { path = "crates/arborium-asciidoc", version = "0.2.0" }
arborium-asciidoc_inline = { path = "crates/arborium-asciidoc_inline", version = "0.2.0" }
arborium-asm = { path = "crates/arborium-asm", version = "0.2.0" }
arborium-awk = { path = "crates/arborium-awk", version = "0.2.0" }
arborium-bash = { path = "crates/arborium-bash", version = "0.2.0" }
arborium-batch = { path = "crates/arborium-batch", version = "0.2.0" }
arborium-c = { path = "crates/arborium-c", version = "0.2.0" }
arborium-c-sharp = { path = "crates/arborium-c-sharp", version = "0.2.0" }
arborium-caddy = { path = "crates/arborium-caddy", version = "0.2.0" }
arborium-capnp = { path = "crates/arborium-capnp", version = "0.2.0" }
arborium-clojure = { path = "crates/arborium-clojure", version = "0.2.0" }
arborium-cmake = { path = "crates/arborium-cmake", version = "0.2.0" }
arborium-commonlisp = { path = "crates/arborium-commonlisp", version = "0.2.0" }
arborium-cpp = { path = "crates/arborium-cpp", version = "0.2.0" }
arborium-css = { path = "crates/arborium-css", version = "0.2.0" }
arborium-d = { path = "crates/arborium-d", version = "0.2.0" }
arborium-dart = { path = "crates/arborium-dart", version = "0.2.0" }
arborium-devicetree = { path = "crates/arborium-devicetree", version = "0.2.0" }
arborium-diff = { path = "crates/arborium-diff", version = "0.2.0" }
arborium-dockerfile = { path = "crates/arborium-dockerfile", version = "0.2.0" }
arborium-dot = { path = "crates/arborium-dot", version = "0.2.0" }
arborium-elisp = { path = "crates/arborium-elisp", version = "0.2.0" }
arborium-elixir = { path = "crates/arborium-elixir", version = "0.2.0" }
arborium-elm = { path = "crates/arborium-elm", version = "0.2.0" }
arborium-erlang = { path = "crates/arborium-erlang", version = "0.2.0" }
arborium-fish = { path = "crates/arborium-fish", version = "0.2.0" }
arborium-fsharp = { path = "crates/arborium-fsharp", version = "0.2.0" }
arborium-gleam = { path = "crates/arborium-gleam", version = "0.2.0" }
arborium-glsl = { path = "crates/arborium-glsl", version = "0.2.0" }
arborium-go = { path = "crates/arborium-go", version = "0.2.0" }
arborium-graphql = { path = "crates/arborium-graphql", version = "0.2.0" }
arborium-haskell = { path = "crates/arborium-haskell", version = "0.2.0" }
arborium-hcl = { path = "crates/arborium-hcl", version = "0.2.0" }
arborium-hlsl = { path = "crates/arborium-hlsl", version = "0.2.0" }
arborium-host = { path = "crates/arborium-host", version = "0.2.0" }
arborium-html = { path = "crates/arborium-html", version = "0.2.0" }
arborium-idris = { path = "crates/arborium-idris", version = "0.2.0" }
arborium-ini = { path = "crates/arborium-ini", version = "0.2.0" }
arborium-java = { path = "crates/arborium-java", version = "0.2.0" }
arborium-javascript = { path = "crates/arborium-javascript", version = "0.2.0" }
arborium-jinja2 = { path = "crates/arborium-jinja2", version = "0.2.0" }
arborium-jq = { path = "crates/arborium-jq", version = "0.2.0" }
arborium-json = { path = "crates/arborium-json", version = "0.2.0" }
arborium-julia = { path = "crates/arborium-julia", version = "0.2.0" }
arborium-kdl = { path = "crates/arborium-kdl", version = "0.2.0" }
arborium-kotlin = { path = "crates/arborium-kotlin", version = "0.2.0" }
arborium-lean = { path = "crates/arborium-lean", version = "0.2.0" }
arborium-lua = { path = "crates/arborium-lua", version = "0.2.0" }
arborium-markdown = { path = "crates/arborium-markdown", version = "0.2.0" }
arborium-markdown-inline = { path = "crates/arborium-markdown-inline", version = "0.2.0" }
arborium-matlab = { path = "crates/arborium-matlab", version = "0.2.0" }
arborium-meson = { path = "crates/arborium-meson", version = "0.2.0" }
arborium-minimal = { path = "crates/arborium-minimal", version = "0.2.0" }
arborium-nginx = { path = "crates/arborium-nginx", version = "0.2.0" }
arborium-ninja = { path = "crates/arborium-ninja", version = "0.2.0" }
arborium-nix = { path = "crates/arborium-nix", version = "0.2.0" }
arborium-objc = { path = "crates/arborium-objc", version = "0.2.0" }
arborium-ocaml = { path = "crates/arborium-ocaml", version = "0.2.0" }
arborium-perl = { path = "crates/arborium-perl", version = "0.2.0" }
arborium-php = { path = "crates/arborium-php", version = "0.2.0" }
arborium-plugin-runtime = { path = "crates/arborium-plugin-runtime", version = "0.2.0" }
arborium-postscript = { path = "crates/arborium-postscript", version = "0.2.0" }
arborium-powershell = { path = "crates/arborium-powershell", version = "0.2.0" }
arborium-prolog = { path = "crates/arborium-prolog", version = "0.2.0" }
arborium-python = { path = "crates/arborium-python", version = "0.2.0" }
arborium-query = { path = "crates/arborium-query", version = "0.2.0" }
arborium-r = { path = "crates/arborium-r", version = "0.2.0" }
arborium-rescript = { path = "crates/arborium-rescript", version = "0.2.0" }
arborium-ron = { path = "crates/arborium-ron", version = "0.2.0" }
arborium-ruby = { path = "crates/arborium-ruby", version = "0.2.0" }
arborium-rust = { path = "crates/arborium-rust", version = "0.2.0" }
arborium-scala = { path = "crates/arborium-scala", version = "0.2.0" }
arborium-scheme = { path = "crates/arborium-scheme", version = "0.2.0" }
arborium-scss = { path = "crates/arborium-scss", version = "0.2.0" }
arborium-sparql = { path = "crates/arborium-sparql", version = "0.2.0" }
arborium-sql = { path = "crates/arborium-sql", version = "0.2.0" }
arborium-ssh-config = { path = "crates/arborium-ssh-config", version = "0.2.0" }
arborium-starlark = { path = "crates/arborium-starlark", version = "0.2.0" }
arborium-svelte = { path = "crates/arborium-svelte", version = "0.2.0" }
arborium-swift = { path = "crates/arborium-swift", version = "0.2.0" }
arborium-textproto = { path = "crates/arborium-textproto", version = "0.2.0" }
arborium-thrift = { path = "crates/arborium-thrift", version = "0.2.0" }
arborium-tlaplus = { path = "crates/arborium-tlaplus", version = "0.2.0" }
arborium-toml = { path = "crates/arborium-toml", version = "0.2.0" }
arborium-tsx = { path = "crates/arborium-tsx", version = "0.2.0" }
arborium-typescript = { path = "crates/arborium-typescript", version = "0.2.0" }
arborium-typst = { path = "crates/arborium-typst", version = "0.2.0" }
arborium-uiua = { path = "crates/arborium-uiua", version = "0.2.0" }
arborium-vb = { path = "crates/arborium-vb", version = "0.2.0" }
arborium-verilog = { path = "crates/arborium-verilog", version = "0.2.0" }
arborium-vhdl = { path = "crates/arborium-vhdl", version = "0.2.0" }
arborium-vim = { path = "crates/arborium-vim", version = "0.2.0" }
arborium-vue = { path = "crates/arborium-vue", version = "0.2.0" }
arborium-wire = { path = "crates/arborium-wire", version = "0.2.0" }
arborium-x86asm = { path = "crates/arborium-x86asm", version = "0.2.0" }
arborium-xml = { path = "crates/arborium-xml", version = "0.2.0" }
arborium-yaml = { path = "crates/arborium-yaml", version = "0.2.0" }
arborium-yuri = { path = "crates/arborium-yuri", version = "0.2.0" }
arborium-zig = { path = "crates/arborium-zig", version = "0.2.0" }
arborium-zsh = { path = "crates/arborium-zsh", version = "0.2.0" }

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/arborium"
