[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tiny_http = "0.12"
flate2 = "1"
brotli = "7"
indicatif = "0.17"
owo-colors = "4"
rayon = "1.10"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
regex = "1"
pulldown-cmark = "0.12"
arborium = { path = "../crates/arborium", features = ["all-languages"] }  # For theme CSS generation and highlight linting
