[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
camino = "1"
facet = { git = "https://github.com/facet-rs/facet" }
facet-args = { git = "https://github.com/facet-rs/facet" }
facet-kdl = { git = "https://github.com/facet-rs/facet" }
facet-json = { git = "https://github.com/facet-rs/facet" }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
structstruck = "0.4"
rootcause = "0.10"
tiny_http = "0.12"
flate2 = "1"
brotli = "7"
indicatif = "0.17"
owo-colors = "4"
rayon = "1.10"
tempfile = "3"
toml = "0.8"
ureq = "2"
regex = "1"
pulldown-cmark = "0.12"
# arborium = { path = "../crates/arborium", features = ["all-languages"] }  # TODO: re-enable for theme CSS generation and highlight linting
