[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
camino = "1"
chrono = "0.4"
fs-err = "3"
which = "7"
facet = { git = "https://github.com/facet-rs/facet", features = ["indexmap"] }
facet-value = { git = "https://github.com/facet-rs/facet" }
facet-args = { git = "https://github.com/facet-rs/facet" }
facet-kdl = { git = "https://github.com/facet-rs/facet" }
facet-json = { git = "https://github.com/facet-rs/facet" }
facet-yaml = { git = "https://github.com/facet-rs/facet" }
facet-pretty = { git = "https://github.com/facet-rs/facet" }
facet-diff = { git = "https://github.com/facet-rs/facet" }
facet-toml = { git = "https://github.com/facet-rs/facet" }
indexmap = { version = "2", features = ["std"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
structstruck = "0.4"
rootcause = "0.10"
tiny_http = "0.12"
indicatif = "0.17"
owo-colors = "4"
rayon = "1.10"
tempfile = "3"
regex = "1"
blake3 = "1"


ignore = "0.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
sailfish = "0.10"
rand = "0.9.2"
toml = "0.8"
walkdir = "2"
flate2 = "1"
tar = "0.4"
brotli = "7"

# NOTE: xtask does NOT depend on arborium-theme - it parses theme TOML files directly
# This avoids circular dependency since arborium-theme/Cargo.toml is generated
toml_edit = "0.23.9"
serde_json = "1.0.145"
walrus = "0.20"
petgraph = "0.7"

[package.metadata.facet-dev]
generate-readmes = false

