[package]
name = "arborium-docsrs-demo"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Demo crate showcasing arborium syntax highlighting on docs.rs"
repository = "https://github.com/bearcove/arborium"
keywords = ["syntax-highlighting", "docs-rs", "demo"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "arborium-header.html"]