[package]
name = "arborium-highlight"
version = "0.622.0"
edition = "2024"
rust-version = "1.85"
description = "Unified syntax highlighting for arborium - works with both static Rust grammars and WASM plugins"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bearcove/arborium"
homepage = "https://github.com/bearcove/arborium"
documentation = "https://docs.rs/arborium-highlight"
keywords = ["syntax-highlighting", "tree-sitter", "wasm"]
categories = ["text-processing"]

[features]
default = []
# Enable the tree-sitter based Grammar implementation for native Rust usage
tree-sitter = ["dep:arborium-tree-sitter", "dep:streaming-iterator"]

[dependencies]
arborium-theme = { version = "0.622.0", path = "../arborium-theme" }
arborium-tree-sitter = { version = "0.622.0", path = "../arborium-tree-sitter", optional = true }
streaming-iterator = { version = "0.1", optional = true }
