[package]
name = "arborium-highlight"
version = "2.0.0"
edition = "2024"
rust-version = "1.85"
description = "Unified syntax highlighting for arborium - works with both static Rust grammars and WASM plugins"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bearcove/arborium"
homepage = "https://github.com/bearcove/arborium"
keywords = ["syntax-highlighting", "tree-sitter", "wasm"]
categories = ["text-processing"]

[features]
default = []
# Enable the tree-sitter based Grammar implementation for native Rust usage
tree-sitter = ["dep:arborium-tree-sitter", "dep:streaming-iterator"]
# Enable Unicode-aware width calculations for ANSI wrapping
unicode-width = ["dep:unicode-width"]
# Enable terminal width auto-detection (not available on WASM)
terminal-size = ["dep:terminal_size"]

[dependencies]
arborium-theme = { version = "2.0.0", path = "../arborium-theme" }
arborium-tree-sitter = { version = "2.0.0", path = "../arborium-tree-sitter", optional = true }
streaming-iterator = { version = "0.1", optional = true }
unicode-width = { version = "0.1", optional = true }
terminal_size = { version = "0.4", optional = true }
