[package]
publish = false
name = "arborium-host"
version = "0.2.2"
edition = "2024"
description = "Arborium host component - orchestrates grammar plugins"
license = "MIT"
repository = "https://github.com/bearcove/arborium"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"

[package.metadata.component]
package = "arborium:host"

[package.metadata.component.target]
path = "../../wit/host.wit"
world = "arborium-host"
