[package]
name = "arborium-java"
version = "0.1.0"
edition = "2024"
description = "java grammar for arborium (tree-sitter bindings)"
license = "MIT"
repository = "https://github.com/bearcove/arborium"
keywords = ["tree-sitter", "java", "syntax-highlighting"]
categories = ["parsing", "text-processing"]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter-patched-arborium = { version = "0.25.10", path = "../../tree-sitter" }
arborium-sysroot = { version = "0.1.0", path = "../arborium-sysroot" }

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[dev-dependencies]
tree-sitter-highlight-patched-arborium = { version = "0.25.10", path = "../../tree-sitter-highlight" }
