[package]
publish = false
name = "arborium-plugin-runtime"
version = "1.2.1"
edition = "2024"
description = "Runtime library for arborium grammar plugins"
license = "MIT"
repository = "https://github.com/bearcove/arborium"

[features]
default = []

[dependencies]
arborium-tree-sitter = { version = "1", path = "../arborium-tree-sitter" }
arborium-wire = { path = "../arborium-wire" }
arborium-sysroot = { version = "1", path = "../arborium-sysroot" }

[dev-dependencies]
arborium-rust = { path = "../arborium-rust" }
