[package]
name = "arborium-query"
version = "1.0.8"
edition = "2024"
description = "query grammar for arborium (tree-sitter bindings)"
license = "MIT"
repository = "https://github.com/bearcove/arborium"
keywords = ["tree-sitter", "query", "syntax-highlighting"]
categories = ["parsing", "text-processing"]

[lib]
path = "src/lib.rs"

[dependencies]
arborium-tree-sitter = { version = "1.0.8", path = "../arborium-tree-sitter" }
arborium-sysroot = { version = "1.0.8", path = "../arborium-sysroot" }

[dev-dependencies]
arborium-test-harness = { version = "1.0.8", path = "../arborium-test-harness" }

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
