[package]
name = "arborium-sysroot"
version.workspace = true
edition.workspace = true
description = "WASM sysroot for arborium grammar crates"
license = "MIT"
repository = "https://github.com/bearcove/arborium"
keywords = ["tree-sitter", "wasm", "sysroot"]
categories = ["parsing", "development-tools"]
links = "arborium_sysroot"

[lib]
path = "src/lib.rs"
