[package]
name = "arborium-sysroot"
version = "1.0.8"
edition = "2024"
description = "WASM sysroot for arborium grammar crates"
license = "MIT"
repository = "https://github.com/bearcove/arborium"
keywords = ["tree-sitter", "wasm", "sysroot"]
categories = ["parsing", "development-tools"]
links = "arborium_sysroot"

[lib]
path = "src/lib.rs"
