[package]
publish = false
name = "arborium-test-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Test harness for arborium grammar crates"

[dependencies]
tree-sitter-patched-arborium = { version = "0.25.10", path = "../../tree-sitter" }
tree-sitter-highlight-patched-arborium = { version = "0.25.10", path = "../../tree-sitter-highlight" }
