[package]
name = "arborium-theme"
version = "0.622.0"
edition = "2024"
rust-version = "1.85"
description = "Theme support for arborium syntax highlighting"
authors = ["Amos Wenger <amos@bearcove.eu>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/bearcove/arborium"
homepage = "https://github.com/bearcove/arborium"
documentation = "https://docs.rs/arborium-theme"
keywords = ["syntax-highlighting", "themes", "tree-sitter"]
categories = ["text-processing"]

[dependencies]
toml = "0.8"
